// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rc-segmented render empty segmented 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  />
</div>
`;

exports[`rc-segmented render label with ReactNode 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="iOS"
      >
        iOS
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
      >
        <div
          id="android"
        >
          Android
        </div>
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
      >
        <h2>
          Web
        </h2>
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented ok 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="iOS"
      >
        iOS
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Android"
      >
        Android
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Web"
      >
        Web
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented with CSSMotion basic 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="iOS"
      >
        iOS
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Android"
      >
        Android
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Web3"
      >
        Web3
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented with options 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="iOS"
      >
        iOS
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Android"
      >
        Android
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Web"
      >
        Web
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented with options null/undefined 1`] = `
<div
  class="rc-segmented rc-segmented-disabled"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected rc-segmented-item-disabled"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
      />
    </label>
    <label
      class="rc-segmented-item rc-segmented-item-disabled"
    >
      <input
        class="rc-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
      />
    </label>
    <label
      class="rc-segmented-item rc-segmented-item-disabled"
    >
      <input
        class="rc-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title=""
      />
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented with options: 1 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="1"
      >
        1
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="2"
      >
        2
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="3"
      >
        3
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="4"
      >
        4
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="5"
      >
        5
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented with options: 2 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="iOS"
      >
        iOS
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Android"
      >
        Android
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Web"
      >
        Web
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented with options: disabled 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="iOS"
      >
        iOS
      </div>
    </label>
    <label
      class="rc-segmented-item rc-segmented-item-disabled"
    >
      <input
        class="rc-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Android"
      >
        Android
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Web"
      >
        Web
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented with title 1`] = `
<div
  class="rc-segmented"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Web"
      >
        Web
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="hello1"
      >
        hello1
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
      >
        <div>
          test1
        </div>
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="hello1.5"
      >
        hello1
      </div>
    </label>
    <label
      class="rc-segmented-item"
    >
      <input
        class="rc-segmented-item-input"
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title=""
      >
        foo1
      </div>
    </label>
  </div>
</div>
`;

exports[`rc-segmented render segmented: disabled 1`] = `
<div
  class="rc-segmented rc-segmented-disabled"
>
  <div
    class="rc-segmented-group"
  >
    <label
      class="rc-segmented-item rc-segmented-item-selected rc-segmented-item-disabled"
    >
      <input
        checked=""
        class="rc-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="iOS"
      >
        iOS
      </div>
    </label>
    <label
      class="rc-segmented-item rc-segmented-item-disabled"
    >
      <input
        class="rc-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Android"
      >
        Android
      </div>
    </label>
    <label
      class="rc-segmented-item rc-segmented-item-disabled"
    >
      <input
        class="rc-segmented-item-input"
        disabled=""
        type="radio"
      />
      <div
        class="rc-segmented-item-label"
        title="Web"
      >
        Web
      </div>
    </label>
  </div>
</div>
`;
